fix: add optional license plate filter to get-all-cars and adjust mechanical condition response by type